--- a/ui/src/components/Home.css
+++ b/ui/src/components/Home.css
@@ -2,7 +2,7 @@
     display: grid;
     grid-template-columns: 2fr 5fr;
     height: 90vh;
-    margin: 15px 150px;
+    margin: 2vh 15vh;
     box-shadow: 2px 3px 19px 1px rgb(103, 103, 103);
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
