--- a/ui/src/components/Home.css
+++ b/ui/src/components/Home.css
@@ -11,7 +11,7 @@
 
 .header {
     grid-column: 1/3;
-    height: 12vh;
+    height: 18vh;
     background-color: rgb(23, 129, 79);
     color: white;
     display: flex;
@@ -32,7 +32,18 @@
     position: relative;
     height: 76vh;
     background-color: #d5d3ce;
-    /* background-image: url("../../public/imgs/bg2.jpg"); */
+}
 
-    /* background-image: url("/bg2"); */
+@media screen and (max-width: 768px) { /*mobile */
+    .left {
+        grid-column: 1/3;
+        height: auto;
+        overflow-y: visible;
+    }
+    .right {
+        grid-column: 1/3;
+    }
+    .wrapper {
+        margin: 2vh 2vh;
+    }
 }
