--- a/ui/src/components/left-components/Container.css
+++ b/ui/src/components/left-components/Container.css
@@ -6,3 +6,13 @@
     background-color: rgb(45, 44, 45);
     padding: 7px ;
 }
+
+@media screen and (max-width: 768px) { 
+    .connection-container {
+        display: flex;
+        overflow-x: scroll;
+    }
+    .connections-h {
+        display:none ;
+    }
+}
