Add: Timestamps to messages, icons

--- a/ui/src/components/right-components/ChatBox.css
+++ b/ui/src/components/right-components/ChatBox.css
@@ -76,3 +76,10 @@
 .other-message {
     background-color: #eee;
 }
+
+.timestamp {
+    font-size: 11px;
+    font-style: italic;
+    opacity: 0.63;
+    text-align: right;
+}
